@@ -19,20 +19,26 @@ MAINTAIN
     Make sure the test_cyther.py file is updated to include the latest features (test everything!)
 
 
+TO-DO (before next version)
+
+    The --test option
+        Add this to the help text
+        Say that if there is an error, to email me the output of this function
+    What is the use of the vcruntime.dll on windows installations? Does it need to be included?
+    Download many different ubuntu and linux or mac operating systems on virtual box to directly test
+    Travis keeps telling me this: 'python: can't open file 'cytherize': [Errno 2] No such file or directory'
+    Make sure a new window doesnt get spawned on the subprocess calls (on some systems it does, some it doesnt)
+    Implement the makefile system
+        But for now make sure it created a file with just commands
+    Make sure that 'cytherize' can be called from the command line correctly
+    Where is the best spot to put the README and all the other files?
+    Fix the help text in the readme to not have 'Nothing here yet'
+        Is there a better way to get the version of gcc?
+    Change the descripting of the readme so that it doesn't say that it is directly a compiler, but a processor instead
+
 EASY FIX
 
     Whats up with CYTHER_CONFIG_FILE? Should we use it?
-
-    Make sure a new window doesnt get spawned on the subprocess calls (on some systems it does, some it doesnt)
-
-    How to deal with non-standard extensions that people might be using? Don't error, but just have it print that
-    it is non standard, and work anyway? What about Regex?
-
-    Update tags
-        take out codacy
-
-    Fix the help text in the readme to not have 'Nothing here yet'
-
 
 MEDIUM FIX
 
@@ -44,14 +50,7 @@ HARD FIX
     Get the operating system dependant flags that are passed to gcc by distutils and inject them when building the
     preset (see question you posed)
 
-    Make sure that the file order provided doesn't matter when compiling multiple files that may depend on one another
-
-
 EASY NEW FEATURES
-
-    Make a --test option in cyther command interface. (Makes testing much easier and quicker)
-
-    Have 'help' text print out all the directories it is using
 
     Get the arguments of run(timer=True) to work properly, or be automatic, like IPython
 
@@ -64,21 +63,14 @@ HARD NEW FEATURES
 
     Instead of the include option, have the system automatically detect the python {}.get_include() modules
 
-    Have a scriptble system of talking to the core and passing in arguments. THIS WOULD BE GREAT!!
-
-    Add cl to the options that are available for compilers
-
     Say the search for the directories necessary for the runtime compilation fails, and returns nothing. Then run the
     crawl algorithm over the whole DRIVE to find a lib file that matches the REGEX definition
 
 
 LOW PRIORITY
 
-    An option to just build the C, or to just take the C and build only the extension
-    How could cyther be used with distutils??
-
     Function to clean a directory of everything 'locally build' related, or move it to a cythercache
-    A function to remove EVERYTHING cyther related
+        A function to remove EVERYTHING cyther related
 
     Always back up the previous compile if there was one. Then if there is an error, don't overwrite it with anything,
     but instead, keep the backup version. Have the new compilation attempt be built in the __cythercache__ directory
@@ -101,11 +93,8 @@ BEFORE DEPLOY (for me)
 
 QUESTIONS (for me to ask myself)
 
-    Split cyther.py into several other modules?
-
-    Where is the best spot to put the README and all the other files?
-
-    Add more presets?? I need to do a brainstorming situation...
+    How to deal with non-standard extensions that people might be using? Don't error, but just have it print that
+    it is non standard, and work anyway? What about Regex?
 
     Don't have args and file, have only one object with everything in it. Does this even make sense?
 
@@ -118,17 +107,8 @@ QUESTIONS (for me to ask myself)
     What about lines like this platform.platform().strip().lower().startswith('windows')??
     What do the platform names even look like? Is their structure reliable? Does it need to be?
 
-    What about bcpp or cygwin??
-
-    Should we even give the option to build locally in the same file?
-
-    Do the commands to argparse need to be changed. Maybe give them better names, and give each a long name.
-
     Is it necessary to make sure that os.pardir will never be a problem??
 
-    How about using tempfile for the building files??
-
-    What about packaging the libraries with cyther?? Are they cross platform? How to even get these libs?
+    What about packaging the libraries with cyther?? Is cross compiling possible / a good idea?
 
     What is the difference between os.name and sys.platform and platform.platform?
-    Why do some return operating systems, and some return processor architectures
