@@ -4,8 +4,8 @@ import subprocess
 
 cyther.core('example_file.pyx -x -e')
 cyther.core('example_file.pyx -t -e')
-subprocess.call(['python', 'cytherize', 'example_file.pyx', '-s', '-e'])
-subprocess.call(['python', 'cytherize', 'example_file.pyx', '-l', '-cython', '_a', '_l', '-e'])
+subprocess.call(['cytherize', 'example_file.pyx', '-s', '-e'])
+subprocess.call(['cytherize', 'example_file.pyx', '-l', '-cython', '_a', '_l', '-e'])
 cyther.core('example_file.pyx -t -c -e')
 cyther.core('example_file.pyx -t -l -e')
 cyther.core('example_file.pyx -x -l -p minimal -gcc _O4 -e')
